<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/tracker_settings_title">

    <PreferenceCategory
        android:title="@string/tracker_local_cache_title"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="local_track_cache_enabled"
            android:title="@string/tracker_local_cache_enabled_title"
            android:summary="@string/tracker_local_cache_enabled_summary"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="24"
            android:key="local_track_cache_retention_hours"
            android:entries="@array/tracker_retention_entries"
            android:entryValues="@array/tracker_retention_values"
            android:title="@string/tracker_local_cache_retention_title"
            android:summary="@string/tracker_local_cache_retention_summary"
            android:dialogTitle="@string/tracker_local_cache_retention_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="tracker_clear_local_track_cache"
            android:title="@string/tracker_local_cache_clear_title"
            android:summary="@string/tracker_local_cache_clear_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/tracker_track_map_title"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="15"
            android:key="track_map_segment_minutes"
            android:entries="@array/tracker_segment_entries"
            android:entryValues="@array/tracker_segment_values"
            android:title="@string/tracker_track_map_segment_title"
            android:summary="@string/tracker_track_map_segment_summary"
            android:dialogTitle="@string/tracker_track_map_segment_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="24"
            android:key="track_map_time_range_hours"
            android:entries="@array/tracker_retention_entries"
            android:entryValues="@array/tracker_retention_values"
            android:title="@string/tracker_track_map_range_title"
            android:summary="@string/tracker_track_map_range_summary"
            android:dialogTitle="@string/tracker_track_map_range_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/tracker_offline_map_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="tracker_offline_map_cache_size"
            android:title="@string/tracker_offline_map_cache_size_title"
            android:summary="@string/tracker_offline_map_cache_size_calculating"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="tracker_clear_offline_map_cache"
            android:title="@string/tracker_offline_map_clear_cache_title"
            android:summary="@string/tracker_offline_map_clear_cache_summary"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="builtin:openstreetmap"
            android:key="offline_map_style_url"
            android:title="@string/tracker_offline_map_style_url_title"
            android:summary="@string/tracker_offline_map_style_url_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
